--- a/startbootstrap-clean-blog-gh-pages/From Scratch Section/scratch.css
+++ b/startbootstrap-clean-blog-gh-pages/From Scratch Section/scratch.css
@@ -28,6 +28,7 @@ body {
 .ci {
     background-image: url("/From\ Scratch\ Section/rainbow.jpg");
 }
+/*
 .block1 {
     z-index: 1; position: absolute; top: 4800px; background-color: black; width: 250px; height: 70px; padding-right: 300px; border: solid 20px; border-color: greenyellow;
 }
@@ -37,3 +38,6 @@ body {
 .block3 {
     block3" style="z-index: 0; position: absolute; top: 4780px; left: 585px; background-color: orangered; width: 50px; height: 50px; border: solid 5px; border-color: red;
 }
+*/
+
+
